[css-flexbox] Incorrect height of flex items with aspect-ratio whenever the cross axis intrinsic size is larger than the viewport https://bugs.webkit.org/show_bug.cgi?id=234564 <rdar://problem/86958389>

Reviewed by Manuel Rego Casasnovas.

Source/WebCore:

Automatic preferred sizes were considered always indefinite. However whenever they correspond to
the (physical) width we could consider them as definite. This allows us to use that size instead of
the flex item intrinsic size when computing the transferred size contribution. This way, flex items
with aspect ratio and large intrinsic size are not abnormally stretched due to the min-size:auto
computation.

* rendering/RenderFlexibleBox.cpp:
(WebCore::RenderFlexibleBox::computeMainSizeFromAspectRatioUsing const): Use availableLogical{Width|Height}
to compute the cross size when then automatic preferred size is the physical width.
(WebCore::RenderFlexibleBox::childCrossAxisIsPhysicalWidth const):
(WebCore::RenderFlexibleBox::childCrossSizeShouldUseContainerCrossSize const): Handle the cases of
automatic preferred widths.
* rendering/RenderFlexibleBox.h:

LayoutTests:

Adjusted the canvas-css-size-after-height-change-with-display-flex.html test case and expectations so it behaves as other engines.

* TestExpectations: Unskipped a test that is passing now.
* fast/canvas/canvas-css-size-after-height-change-with-display-flex-expected.html:
* fast/canvas/canvas-css-size-after-height-change-with-display-flex.html:


Canonical link: https://commits.webkit.org/246005@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@287976 268f45cc-cd09-0410-ab3c-d52691b4dbfc